@@ -11,6 +11,7 @@ Revision history for Rex
  - Clarify setting per-host authentication details within a group
 
  [ENHANCEMENTS]
+ - Check availability of sysctl command
 
  [MAJOR]
 
